attempts to fix mobile scroll bg image stretch

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -15,10 +15,14 @@ html, body {
 	cursor: url('../client/images/icons/note.png'), pointer;
 	font-family: 'poppins';
 	margin: 0;
-	/*height: 100%;*/
-	/*background: linear-gradient(180deg, #A4E9F9 0%, #c5aef2 100%) fixed;*/
 	background: url("../client/images/cassete-purple.png") no-repeat center center fixed;
 	background-size: cover;
+	z-index: -1;
+	position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
 	&.loadingBackground {
 		height: 100vh !important;
 		animation-name: color;
